apps/ebloved/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ebloved
  namespace: ebloved
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ebloved
  template:
    metadata:
      labels:
        app: ebloved
    spec:
      containers:
        - name: ebloved
          image: ghcr.io/georgeipsum/ebloved:sha-0f95efa
          ports:
            - containerPort: 4000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 4000
            initialDelaySeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 512Mi
