apps/ebloved/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ebloved
  namespace: ebloved
spec:
  selector:
    app: ebloved
  ports:
    - port: 80
      targetPort: 4000
